--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Tanim</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quod ipsa qui voluptatibus animi incidunt numquam quasi cumque! Amet, ducimus.</p>
+    <h2>Muhim</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed deleniti voluptatem ab, natus similique quasi totam? Soluta tempore nisi nulla.</p>
 </body>
 </html>
